Fixing layout of feed on mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -132,5 +132,6 @@ section {
 .breaking{
   height: 25px;
   margin: auto;
-  padding-top: 12px;
+  padding-top: 5px;
+  font-size: 18px;
 }
